- criação dos cards -a asjustes no set do foundation

--- a/index.html
+++ b/index.html
@@ -11,14 +11,13 @@
 
 <body>
 
-	<div class="grid-container margin">
+	<div class="grid-container general">
 
 		<header>
-
-			<div class="grid-x align-center height-100 align-middle header--menu">
+			<div class="grid-x align-center align-middle header--menu grid-margin-x">
 
 				<div class="logo">
-					<img src="assets/images/logo.png" alt="">
+					<img class="logoimg" src="assets/images/logo.png" alt="">
 				</div>
 
 				<ul class="menu align-center">
@@ -33,14 +32,149 @@
 				</ul>
 
 			</div>
-
 		</header>
 
-		<div class="large-12 cell">
-			<div class="banner"></div>
-		</div>
+		<section class="grid-container full">
+			<div class="banner">
+				<div class="banner--area animate__animated wow fadeIn animated"
+					style="visibility: visible; animation-name: fadeIn;">
+					<img class="banner--image" src="assets/images/big_logo.png">
+				</div>
+			</div>
+		</section>
+
+		<main class="grid-container full">
+
+			<section class="grid-x align-center">
+
+				<div class="small-9 medium-6 large-9 cell text-center">
+					<br>
+					<h1>Sobre</h1>
+					<br>
+					<div>
+						<p>Há 3 anos no mercado, a Global nasceu para atender à crescente demanda de importação no
+							Brasil, contribuindo para o abastecimento das principais distribuidoras do mercado nacional.
+						</p>
+						<p>Com profissionais experientes na área de distribuição de combustível e logística, a Global
+							opera na importação de gasolina, etanol e diesel. Garantindo qualidade e segurança nas
+							operações dos
+							seus clientes.
+						</p>
+					</div>
+				</div>
+
+			</section>
+
+			<section class="grid-x align-center">
+
+				<div class="small-9 medium-6 large-9 cell text-center">
+					<h1>Serviços</h1>
+					<br>
+					<div>
+						<p>Negociamos derivados de petróleo e biocombustíveis no mercado internacional com grande
+							agilidade
+							nas
+							liberações e operações de retirada.</p>
+						<p>A Global Import negocia os derivados de diversos modos, a fim de garantir preço, liquidez e
+							oferta
+							condizentes com a demanda do mercado brasileiro.</p>
+						<p>Alguns dos tipos de importação feitos pela Global Import.</p>
+					</div>
+				</div>
+
+			</section>
+
+			<br>
+
+			<section class="align-center">
+
+				<div class="grid-x grid-margin-x align-center">
+
+					<div class="large-3 medium-9 small-9 cell service-card">
+						<h2 class="text-center">IMPORTAÇÃO POR CONTA E ORDEM</h2>
+						<div class="service--line"></div>
+						<img src="assets/images/caminhão.png" alt="navio">
+						<label class="description">Todos os processos e burocracias envolvidos no trabalho de
+							despacho
+							aduaneiro.</label>
+					</div>
+
+					<div class="large-3 medium-9 small-9 cell service-card">
+						<h2>IMPORTAÇÃO POR ENCOMENDA</h2>
+						<div class="service--line"></div>
+						<img src="assets/images/navio.png" alt="navio">
+						<label class="description">Além das questões burocráticas de despacho, a empresa que realiza
+							a
+							encomenda também não precisa se envolver na negociação.</label>
+					</div>
+
+					<div class="large-3 medium-9 small-9 cell service-card">
+						<h2>IMPORTAÇÃO<br>DIRETA</h2>
+						<div class="service--line"></div>
+						<img src="assets/images/barril.png" alt="navio">
+						<label class="description">Garante mais flexibilidade aos processos logísticos.</label>
+					</div>
+
+				</div>
+
+			</section>
+
+			<br>
+			<br>
+
+			<section>
+
+				<div class="grid-x align-center align-bottom">
+
+					<div class="occupation--desc text-left">
+						<h1>Área de Atuação</h1>
+						<br>
+						<p class="text-left">Atuamos nos principais portos brasileiros, como <strong>Itaqui
+								(MA)</strong>,
+							<strong>Suape (PE)</strong>, <strong>Aratu (BA)</strong>, <strong>Santos (SP)</strong>
+							e <strong>Paranaguá (PR)</strong>, importando
+							Diesel A, Gasolina A e Etanol
+							Anidro puros e vendendo-os
+							para distribuidoras nacionais.
+						</p>
+					</div>
+
+					<div class="occupation--map animate__animated animate__fade wow fadeInRight animated"
+						style="visibility: visible; animation-name: fadeInRight;">
+						<img src="assets/images/map.png" alt="mapa">
+					</div>
+
+				</div>
+
+			</section>
+
+			<br>
+			<br>
+		</main>
 
 	</div>
+
+	<footer class="grid-container full">
+
+		<div class="grid-x align-center-middle">
+
+			<div class="contact--left animate__animated wow fadeIn animated large-3 medium-6 small-9 cell"
+				style="visibility: visible; animation-name: fadeIn;">
+				<h2>PRECISA DE AJUDA?</h2>
+				<label>CONTATO</label>
+			</div>
+
+			<div class="vertical-line"></div>
+
+			<div class="contact--right animate__animated wow fadeIn animated large-3 medium-6 small-9 cell"
+				style="visibility: visible; animation-name: fadeIn;">
+				<h2>E-mail: operacoes@tradingglobal.com.br</h2>
+				<h2>Fone: +55 (11) 2853-9053</h2>
+			</div>
+
+		</div>
+
+	</footer>
 
 	<script src="node_modules/jquery/dist/jquery.js"></script>
 	<script src="node_modules/what-input/dist/what-input.js"></script>
