--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<meta http-equiv="x-ua-compatible" content="ie=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Foundation for Sites</title>
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
 	<link rel="stylesheet" href="css/app.css">
 </head>
 
@@ -17,7 +18,7 @@
 			<div class="grid-x align-center align-middle header--menu grid-margin-x">
 
 				<div class="logo">
-					<img class="logoimg" src="assets/images/logo.png" alt="">
+					<img class="logoimg animate__animated wow fadeIn animated" style="visibility: visible; animation-name: fadeIn;" src="assets/images/logo.png" alt="">
 				</div>
 
 				<ul class="menu align-center">
@@ -45,7 +46,7 @@
 
 		<main class="grid-container full">
 
-			<section class="grid-x align-center">
+			<section id="about" class="grid-x align-center animate__animated wow fadeIn animated" style="visibility: visible; animation-name: fadeIn;">
 
 				<div class="small-9 medium-6 large-9 cell text-center">
 					<br>
@@ -65,7 +66,7 @@
 
 			</section>
 
-			<section class="grid-x align-center">
+			<section id="services" class="grid-x align-center animate__animated wow fadeIn animated" style="visibility: visible; animation-name: fadeIn;">
 
 				<div class="small-9 medium-6 large-9 cell text-center">
 					<h1>Serviços</h1>
@@ -90,7 +91,8 @@
 
 				<div class="grid-x grid-margin-x align-center">
 
-					<div class="large-3 medium-9 small-9 cell service-card">
+					<div class="large-3 medium-9 small-9 cell service-card animate__animated animate__fade wow fadeInLeft animated"
+					style="visibility: visible; animation-name: fadeInLeft;">
 						<h2 class="text-center">IMPORTAÇÃO POR CONTA E ORDEM</h2>
 						<div class="service--line"></div>
 						<img src="assets/images/caminhão.png" alt="navio">
@@ -99,7 +101,8 @@
 							aduaneiro.</label>
 					</div>
 
-					<div class="large-3 medium-9 small-9 cell service-card">
+					<div class="large-3 medium-9 small-9 cell service-card animate__animated animate__fade wow fadeInLeft animated"
+					style="visibility: visible; animation-name: fadeInUp;">
 						<h2>IMPORTAÇÃO POR ENCOMENDA</h2>
 						<div class="service--line"></div>
 						<img src="assets/images/navio.png" alt="navio">
@@ -108,7 +111,8 @@
 							encomenda também não precisa se envolver na negociação.</label>
 					</div>
 
-					<div class="large-3 medium-9 small-9 cell service-card">
+					<div class="large-3 medium-9 small-9 cell service-card animate__animated animate__fade wow fadeInLeft animated"
+					style="visibility: visible; animation-name: fadeInRight;">
 						<h2>IMPORTAÇÃO<br>DIRETA</h2>
 						<div class="service--line"></div>
 						<img src="assets/images/barril.png" alt="navio">
@@ -122,7 +126,7 @@
 			<br>
 			<br>
 
-			<section>
+			<section id="occupation" class="animate__animated wow fadeIn animated" style="visibility: visible; animation-name: fadeIn;">
 
 				<div class="grid-x align-center align-bottom">
 
@@ -154,7 +158,7 @@
 
 	</div>
 
-	<footer class="grid-container full">
+	<footer id="contact" class="grid-container full">
 
 		<div class="grid-x align-center-middle">
 
@@ -180,6 +184,10 @@
 	<script src="node_modules/what-input/dist/what-input.js"></script>
 	<script src="node_modules/foundation-sites/dist/js/foundation.js"></script>
 	<script src="js/app.js"></script>
+	<script src="script.js"></script>
+	<script>
+		new WOW().init();
+	</script>
 </body>
 
 </html>
